SERVER-45917 Make waitForDelete wait for deletion to be scheduled before waiting for clean